# DTBOffsets_galaxy_s5_dev_tree_appended_bug

./: .gitignore  Makefile.am  configure.ac
DTBOffsets/: DTBOffsets.cpp  DTBOffsets.hpp  GenShellcode.cpp  GenShellcode.hpp  Makefile.am  main.cpp
DTBOffsets.xcodeproj/: project.pbxproj
